<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp">
                <ImageView
                    android:id="@+id/image_preview"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    tools:src="@drawable/hammer"/>
                <android.support.v7.widget.AppCompatButton
                    style="@style/Base.Widget.AppCompat.Button.Colored"
                    android:id="@+id/add_img_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/add_image"
                    app:backgroundTint="@android:color/holo_blue_light"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="4dp"
                    android:layout_marginRight="4dp"
                    android:gravity="center_vertical|end"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:text="@string/product_name"/>
                <EditText
                    android:id="@+id/product_name"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="match_parent"
                    android:hint="@string/enter_name_here"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="4dp"
                    android:layout_marginRight="4dp"
                    android:gravity="center_vertical|end"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:text="@string/quantity"/>
                <EditText
                    android:id="@+id/quantity"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="match_parent"
                    android:inputType="number|textNoSuggestions"
                    android:hint="@string/enter_quantity_here"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="4dp"
                    android:layout_marginRight="4dp"
                    android:gravity="center_vertical|end"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:text="@string/price"/>
                <EditText
                    android:id="@+id/price"
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="match_parent"
                    android:inputType="numberDecimal|textNoSuggestions"
                    android:hint="@string/enter_price_here"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin">
                <View
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent" />
                <!-- http://stackoverflow.com/questions/26519979/coloring-buttons-in-android-with-material-design-and-appcompat -->
                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/cancel_button"
                    style="@style/Base.Widget.AppCompat.Button.Colored"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    app:backgroundTint="@android:color/holo_red_dark"
                    android:text="@string/cancel"/>
               <View
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent" />
                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/submit_button"
                    style="@style/Base.Widget.AppCompat.Button.Colored"
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    app:backgroundTint="@color/colorPrimary"
                    android:text="@string/submit"/>
                <View
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>