<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_marginStart="@dimen/activity_horizontal_margin"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginEnd="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/product_image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:maxHeight="150dp"
            android:adjustViewBounds="true"
            tools:src="@drawable/hammer"/>
        <TextView
            android:id="@+id/product_name_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textAlignment="center"
            tools:text="Product Name"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="4dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quantity"
                android:paddingEnd="8dp"
                android:paddingRight="8dp"
                android:textSize="30sp"/>
            <TextView
                android:id="@+id/quantity_value_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                tools:text="16"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin">
            <android.support.v7.widget.AppCompatButton
                style="@style/Base.Widget.AppCompat.Button.Colored"
                android:id="@+id/sales_tracking_button"
                android:layout_gravity="start"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/sales_tracking"
                app:backgroundTint="@android:color/holo_green_dark"/>
            <View
                android:layout_width="20dp"
                android:layout_height="match_parent"/>
            <android.support.v7.widget.AppCompatButton
                style="@style/Base.Widget.AppCompat.Button.Colored"
                android:id="@+id/shipment_received_button"
                android:layout_gravity="end"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/shipment_tracking"
                app:backgroundTint="@android:color/holo_orange_dark"/>
        </LinearLayout>

        <android.support.v7.widget.AppCompatButton
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:id="@+id/order_product"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_more"
            app:backgroundTint="@android:color/holo_blue_dark"/>

        <android.support.v7.widget.AppCompatButton
            style="@style/Base.Widget.AppCompat.Button.Colored"
            android:id="@+id/delete_product"
            android:layout_gravity="center"
            android:layout_marginTop="36dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_product"
            app:backgroundTint="@android:color/holo_red_dark" />
    </LinearLayout>
</ScrollView>
