<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/list_item"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/product_name"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            tools:text="Product Name"
            android:textSize="16sp"
            android:textAlignment="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:layout_gravity="center_vertical"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                    android:paddingRight="4dp"
                    android:paddingEnd="4dp"
                    android:paddingBottom="4dp"
                android:text="@string/quantity" />
                <TextView
                    android:id="@+id/quantity_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="16"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="4dp"
                    android:paddingEnd="4dp"
                    android:text="@string/price"/>
                <TextView
                    android:id="@+id/price_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="$10.00"/>
            </LinearLayout>
        </LinearLayout>
        <Button
            android:id="@+id/sell_one_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:text="@string/sell_one"/>
    </LinearLayout>
    <View
        android:id="@+id/item_divider"
        android:clickable="false"
        android:focusable="false"
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@android:color/darker_gray" />
</LinearLayout>
